@@ -326,15 +326,6 @@
         layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
         permission="zope2.View" />
 
-    <!-- the view that change an advice delay and display a popup to confirm change -->
-    <browser:page
-        for="Products.PloneMeeting.interfaces.IMeetingItem"
-        name="change-advice-delay"
-        class=".advicechangedelay.AdviceChangeDelayView"
-        template="templates/advicedelayschange.pt"
-        layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
-        permission="zope2.View" />
-
     <!-- the view that display MeetingItem.advice_delay_changes_history in a popup -->
     <browser:page
         for="Products.PloneMeeting.interfaces.IMeetingItem"
@@ -359,6 +350,15 @@
         layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
         name="item_emergency_change_form"
         class=".itememergency.ItemEmergencyChangeFormWrapper"
+        permission="zope2.View"
+      />
+
+    <!-- Form that manage advice delay change with required comment -->
+    <browser:page
+        for="Products.PloneMeeting.interfaces.IMeetingItem"
+        layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
+        name="advice_delay_change_form"
+        class=".advicechangedelay.AdviceChangeDelayFormWrapper"
         permission="zope2.View"
       />
 
