@@ -1,31 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xml:lang="en"
-      lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="PloneMeeting">
-
-  <body>
-  <metal:fill fill-slot="main">
-
-    <h1 class="documentFirstHeading" tal:content="context/Title">Title</h1>
-    <form id="changeAdviceDelayForm" method="post"
-          tal:attributes="action python:context.absolute_url() + '/@@change-advice-delay'">
-    <input type="hidden" name="new_advice_row_id" tal:attributes="value view/request/new_advice_row_id"/>
-    <input type="hidden" name="current_advice_row_id" tal:attributes="value view/request/current_advice_row_id"/>
-    <tal:comment replace="nothing">Optional comment</tal:comment>
-    <p class="popups_field_descr" i18n:translate="">You are about to change delay for this advice to <span style="font-weight: bold;" i18n:name="new_advice_delay" i18n:domain="PloneMeeting" i18n:translate="" tal:content="python: view.cfg._dataForCustomAdviserRowId(view.request.get('new_advice_row_id'))['delay']">advice delay</span> days, you can enter a comment if necessary.</p>
-    <label for="comment" i18n:translate="advice_change_delay_comment">Comment</label>
-    <textarea name="comment" rows="8"></textarea><br/><br/>
-    <div align="center">
-      <input type="hidden" name="form.submitted:boolean" value="True" />
-      <input type="submit" name="form.buttons.save" class="context" value="Save" i18n:attributes="value" i18n:domain="plone" />
-      <input type="submit" name="form.buttons.cancel" class="standalone" value="Cancel" i18n:attributes="value" i18n:domain="plone" />
-    </div>
-    </form>
-
-  </metal:fill>
-  </body>
-</html>
