@@ -1586,16 +1586,23 @@ class testAdvices(PloneMeetingTestCase):
         self.assertTrue(item.adviceIndex['vendors']['row_id'] == 'unique_id_123')
         self.assertTrue(item.adviceIndex['vendors']['delay'] == '5')
         self.assertTrue(item.adviceIndex['vendors']['optional'] is True)
-        changeDelayView = item.restrictedTraverse('@@change-advice-delay')
-        self.portal.REQUEST.set('current_advice_row_id', 'unique_id_123')
-        self.portal.REQUEST.form['form.submitted'] = True
+        changeDelayForm = item.restrictedTraverse('@@advice_delay_change_form').form_instance
+        self.request['form.widgets.current_delay_row_id'] = u'unique_id_123'
+
         # first check that if we try to play the fennec, it raises Unauthorized
-        self.portal.REQUEST.set('new_advice_row_id', 'some_dummy_value')
-        self.assertRaises(Unauthorized, changeDelayView)
+        self.request['form.widgets.new_delay_row_id'] = u'some_dummy_value'
+        self.assertRaises(Unauthorized, changeDelayForm)
         # now change the delay, really
-        self.portal.REQUEST.set('new_advice_row_id', 'unique_id_789')
+        self.request['form.widgets.new_delay_row_id'] = u'unique_id_789'
         # delay is changed to third custom adviser, aka 20 days
-        changeDelayView()
+        changeDelayForm()
+        changeDelayForm.handleSaveAdviceDelay(changeDelayForm, '')
+        # not changed as comment is required
+        self.assertEqual(item.adviceIndex['vendors']['row_id'], 'unique_id_123')
+        self.assertEqual(item.adviceIndex['vendors']['delay'], '5')
+        # now apply with comment
+        self.request['form.widgets.comment'] = u'My comment'
+        changeDelayForm.handleSaveAdviceDelay(changeDelayForm, '')
         self.assertTrue(item.adviceIndex['vendors']['row_id'] == 'unique_id_789')
         self.assertTrue(item.adviceIndex['vendors']['delay'] == '20')
         # a special key save the fact that we saved delay of an automatic adviser
@@ -1614,10 +1621,10 @@ class testAdvices(PloneMeetingTestCase):
         self.assertTrue(item.adviceIndex['vendors']['delay'] == '5')
         self.assertTrue(item.adviceIndex['vendors']['optional'] is False)
         # if a normal user tries to change an automatic advice delay, it will raises Unauthorized
-        self.assertRaises(Unauthorized, changeDelayView)
+        self.assertRaises(Unauthorized, changeDelayForm.handleSaveAdviceDelay, changeDelayForm, '')
         # now as MeetingManager it works
         self.changeUser('pmManager')
-        changeDelayView()
+        changeDelayForm.handleSaveAdviceDelay(changeDelayForm, '')
         self.assertTrue(item.adviceIndex['vendors']['row_id'] == 'unique_id_789')
         self.assertTrue(item.adviceIndex['vendors']['delay'] == '20')
         self.assertTrue(item.adviceIndex['vendors']['delay_for_automatic_adviser_changed_manually'] is True)
